--- a/index.html
+++ b/index.html
@@ -1,6 +1,2 @@
-<p>
-    This is my new Repository!
-</p>
-<p>
-    This is my new feature!
-</p>
+<p> This is my new Repository! </p>
+<p>This is my new feature! </p>
