--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<p> This is my new Repository! </p>
-<p>This is my new feature! </p>
+<p>
+    This is my new Repository!
+</p>
+<p>
+    This is my new Feature!
+</p>
