--- a/index.html
+++ b/index.html
@@ -2,4 +2,4 @@
     This is my new Repository!
 </p>
 <p>This is my new Feature! (Dropdown) </p>
-<p>  This is my new Feature! (button) </p>
+<p>This is my new Feature! (Button) </p>
